# rifiuti2

./: .editorconfig  .gitignore  .travis.yml  404.html  404.md  AUTHORS  CMakeLists.txt  CTestConfig.cmake  ChangeLog  LICENSE  MAINTAINERS  Makefile.am  NEWS  NEWS.md  README  README.md  Readme.old  THANKS  TODO  _config.yml  appveyor.bat  archive.html  autogen.sh  config.h.in  configure.ac  dist-win.mk  feed.xml  git.mk  history.md  index.html  index.md  main.sass  news.html  params.json  tags.html  technical.md
.github/workflows/: check.yml  cmake_check.yml  release.yml
_data/: SocialNetworks.yml
_includes/: articleheader.html  comment.html  footer.html  fullwidth-figure.html  google-analytic.html
_layouts/: base.html  blank.html  default.html  minimal.html
_posts/: 2015-05-15-reason-abandon-msys1.md  2015-05-15-site-is-up.md  2015-05-16-version-0-6-released.md  2015-05-18-pain-in-timezone-support.md  2015-05-28-version-0-6-1-released.md  2015-06-14-porting-effort.md  2019-05-09-version-0-7-0-released.md  2019-07-13-site-revamp-and-doc.md  2019-07-22-guess-ver-from-artifacts.md  2024-01-04-version-0-8-released.md  2024-05-01-version-0-8-1-released.md
_sass/: _customize.scss  basic.sass  mixins.sass  vendor.sass
_sass/beautiful-jekyll/: _callout.scss  _variables.scss
_static/: 404.md  history.md  technical.md
assets/css/: override.css
assets/js/: config.coffee  customize.coffee
css/: override.scss
debian/: docs
docs/: AUTHORS  ChangeLog.old  Compile.md  LICENSE  LICENSE.md  LICENSE.txt  THANKS  THANKS.txt  readme.txt.in  rifiuti.1.in  win-readme.txt
news/: index.html
po/: LINGUAS  Makevars  POTFILES.in  zh_HK.po
src/: .indent.pro  Makefile  Makefile.am  config.h.in  rifiuti-vista.c  rifiuti-vista.h  rifiuti.1  rifiuti.c  rifiuti.h  try.c  utils-conv.c  utils-conv.h  utils-error.h  utils-io.c  utils-io.h  utils-linux.c  utils-linux.h  utils-platform.h  utils-win.c  utils-win.h  utils.c  utils.h
tags/RIFIUTI2_0_5_0/: AUTHORS  autogen.sh  configure.ac
tags/RIFIUTI2_0_5_0/src/: Makefile.am  rifiuti-vista.c  rifiuti.dtd
tags/RIFIUTI2_0_5_1/: ChangeLog  MAINTAINERS  Makefile.am
tags/RIFIUTI2_0_5_1/debian/: changelog  control  rules
tags/RIFIUTI2_0_5_1/src/: Makefile.am  rifiuti-vista.dtd
tags/RIFIUTI2_0_5_1/test/INFO2_test2/results/: xml_result
tags/RIFIUTI2_0_5_1/test/vista_test1/test_case/: $IMG2SSB
test/: CMakeLists.txt  Makefile.am  atlocal.in  ax_at_check_pattern.m4  getcharset.c  rifiuti-schema.json  rifiuti.dtd  test_cli_option.at  test_common.at  test_encoding.at  test_faulty_dir.at  test_glib_iconv.c  test_parse_dir.at  test_parse_info2.at  test_read_write.at  test_xml.at  testsuite.at
test/INFO2_test1/results/: text_result
test/INFO2_test2/results/: text_result
test/cmake/: _try_encoding.cmake  cli-option.cmake  crafted.cmake  encoding.cmake  json.cmake  parse-info2.cmake  parse-rdir.cmake  read-write.cmake  xml.cmake
test/samples/: INFO-95-ja-1  INFO-95-ja-1-in-cp1255.json  INFO-95-ja-1-in-cp949.xml  INFO-95-ja-1.json  INFO-95-ja-1.txt  INFO-95-ja-1.xml  INFO-NT-en-1  INFO-NT-en-1.txt  INFO2-03-tw-uncpath  INFO2-03-tw-uncpath.txt  INFO2-2k-cht-1  INFO2-2k-cht-1.txt  INFO2-2k-tw-uncpath  INFO2-2k-tw-uncpath.txt  INFO2-ME-en-1  INFO2-ME-en-1.txt  INFO2-empty  INFO2-empty.json  INFO2-empty.txt  INFO2-empty.xml  INFO2-me-en-uncpath  INFO2-me-en-uncpath.txt  INFO2-sample1-alt.txt  INFO2-sample1.json  INFO2-sample1.txt  INFO2-sample1.xml  INFO2-sample2  INFO2-sample2-wrong-enc.txt  INFO2-sample2.json  INFO2-sample2.txt  INFO2-sample2.xml  INFO2-trunc  dir-2016-uncpath.txt  dir-2019-uncpath.json  dir-2019-uncpath.txt  dir-bad-uni.txt  dir-empty.txt  dir-empty.xml  dir-isolated-idx.txt  dir-mixed.txt  (+9 more)
test/samples/dir-2019-uncpath/: $IW0RYW0.rtf  $IYDW1CC.rtf
test/samples/dir-bad-uni/: $I77T7B0.ahk  $I77T7B1.ahk  $I77T7B2.ahk  $I77T7B3.ahk
test/samples/dir-badfiles/: $IF47Q09  $IW0RYW0.rtf  $IX1JBL3.djvu
test/samples/dir-sample1/: $I1IS2OK.txt  $I95CUKU  $IUVFB0M.rtf  $IZK01YL.txt  $RUVFB0M.rtf
test/samples/dir-win10-01/: $I7R52EG.txt  $IBBFODN  $IHO61YT  $IKEGS1G  $R7R52EG.txt
test/vista_test1/results/: text_result  xml_result
test/vista_test1/test_case/: $IZUFRX4.vmdk
trunk/: ChangeLog  NEWS  README  TODO  autogen.sh  configure.ac
trunk/debian/: changelog  control  copyright
trunk/po/: POTFILES.in
trunk/src/: Makefile.am  rifiuti-vista.c  rifiuti-vista.h  rifiuti.1  rifiuti.c  rifiuti.h  utils.h
trunk/test/vista_test1/test_case/: $I0JGHX7
wiki/: InstallPackage.wiki
